# web-use

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
scripts/: replay_manager.py
src/agent/: __init__.py  base.py  loop.py  service.py  utils.py  views.py
src/agent/auth/: __init__.py  service.py  views.py
src/agent/browser/: __init__.py  config.py  events.py  page.py  script.js  service.py  session.py  views.py
src/agent/context/: __init__.py  service.py
src/agent/dom/: __init__.py  service.py  views.py
src/agent/events/: __init__.py  json_subscriber.py  service.py  subscriber.py  views.py
src/agent/registry/: __init__.py  service.py  views.py
src/agent/replay/: __init__.py  enhanced_recorder.py  selenium_replayer.py
src/agent/session/: service.py
src/agent/tools/: __init__.py  service.py  views.py
src/agent/watchdog/: __init__.py  base.py  crash.py  dialog.py  dom.py  download.py  popup.py  state.py
src/cdp/: domains.py  service.py
src/hooks/: __init__.py  base.py  service.py
src/hooks/builtin/: __init__.py  glow.py
src/messages/: __init__.py  service.py
src/providers/: __init__.py  base.py  events.py  views.py
src/providers/anthropic/: __init__.py  llm.py
src/providers/azure_openai/: __init__.py  llm.py
src/providers/cerebras/: __init__.py  llm.py
src/providers/deepseek/: __init__.py  llm.py
src/providers/google/: __init__.py  llm.py
src/providers/groq/: __init__.py  llm.py
src/providers/litellm/: __init__.py  llm.py
src/tools/: __init__.py  service.py
tests/: test_browser_attach.py
(+67 files in other folders)
